--- a/trunk/x10.runtime.cws/paper/x10graph.tex
+++ b/trunk/x10.runtime.cws/paper/x10graph.tex
@@ -28,39 +28,7 @@
 \newcommand{\bigO}[1]{\mbox{\mbox{O}$\paren{#1}$}\xspace}
 \newcommand{\MCB}[3]{\mbox{$\left< #1 \;;\; #2 \;;\; #3 \right>$}\xspace}
 \newcommand{\TRIPLET}{\MCB{T_{M}(n,p)}{T_{C}(n,p)}{B(p)}}
-\newcommand{\Boruvka}{Bor{\uu}vka\xspace}
-\newcommand{\BorEL}{\emph{Bor-EL}\xspace}
-\newcommand{\BorAL}{\emph{Bor-AL}\xspace}
-\newcommand{\BorALM}{\emph{Bor-ALM}\xspace}
-\newcommand{\BorFAL}{\emph{Bor-FAL}\xspace}
-\newcommand{\BCMSF}{\textbf{BC-MSF}\xspace}
-\newcommand{\MSTBC}{\emph{MST-BC}\xspace}
-\newcommand{\FINDMIN}{\emph{find-min}\xspace}
-\newcommand{\CC}{\emph{connected-components}\xspace}
-\newcommand{\COMPGRAGPH}{\emph{compact-graph}\xspace}
-\newcommand{\STRO} {\emph{str0}\xspace}
-\newcommand{\STRI} {\emph{str1}\xspace}
-\newcommand{\STRII} {\emph{str2}\xspace}
-\newcommand{\STRIII} {\emph{str3}\xspace}
-\newcommand{\IIDVI} {\emph{2D60}\xspace}
-\newcommand{\IIIDIV}{\emph{3D40}\xspace} 
-\newcommand{\IIDTORUS}{\emph{2D Torus}\xspace} 
-\newcommand{\ADIII}{\emph{AD3}\xspace}
-\newcommand{\REGIREGM}{\emph{Regular and Irregular Meshes}\xspace}
-\newcommand{\RANDGRAPH}{\emph{Random Graphs}\xspace}
-\newcommand{\HEM}{\mbox{\emph{heap\_extract\_min}}\xspace}
-\newcommand{\HDC}{\mbox{\emph{heap\_decrease\_key}}\xspace}
-\newcommand{\HINS}{\mbox{\emph{heap\_insert}}\xspace}
-\newcommand{\mycolor}{\mbox{\emph{my\_color}}\xspace}
-\newcommand{\RGRAFT}{\mbox{RST-Graft}\xspace}
-\newcommand{\EGRAFT}{\mbox{Euler-Graft}\xspace}
-\newcommand{\RTRAV}{\mbox{RST-Trav}\xspace}
-\newcommand{\SGRAFT}{\mbox{ST-Graft}\xspace}
-\newcommand{\STRAV}{\mbox{ST-Trav}\xspace}
-\newcommand{\TV}{TV\xspace}
-\newcommand{\LOWHIGH}{\emph{Low-high}\xspace}
-\newcommand{\LABELE}{\emph{Label-edge}\xspace}
-\newcommand{\T}{$T$\xspace}
+\newcommand{\IND}{\indent\indent}
 
 %% \newtheorem{theorem}{Theorem}
 %% \newtheorem{lemma}{Lemma}
@@ -80,9 +48,8 @@
 \begin{document}
 %\begin{spacing}{1}
 
-\title{Techniques for Designing Efficient Parallel Graph
-  Algorithms for SMPs and Multicore Processors}
-\titlerunning{Techniques for Designing Efficient Parallel Graph Algorithms}
+\title{Solving Large-scale Graph Problems in X10}
+\titlerunning{}
 \author{ }
 \institute{}
 \maketitle
@@ -138,15 +105,95 @@ to an irregular data structure that is often difficult to partition well for dis
 \section{Designing Parallel Graph Algorithms in X10}
 \label{s:design}
 
- Invariably algorithms are designed, although sometime implicitly, for an abstract algorithm model. Different programming languages provide interfaces on different levels to the algorithm designer or programmer through programming models. For example, with the PRAM model, the processors are synchronous and access to different memory locations are of uniform distance. PRAM is great for exploring the maximum parallelism in a problem. However, as the model is too far away from any of the current or emerging architectures, significant effort is necessary to produce efficient implementations on SMPs. Distributed memoy models, on the other hand, try to take the message passing cost into consideraton. However, it forces , and you do not always see the parallelism.
+ Invariably algorithms are designed, although sometimes implicitly, with an abstract algorithmic model. Programming languages play an important role in the translation of an algorithm to an executable program on the target system. When there is a large gap between model and architecture, programming languages and efficient runtime support can be immensely helpful in achieving high perofrmance with relatively ease of programming. 
 
-X10 is designed for a cluster of SMPs. On one hand you have a virtual shared address space, on the other hand you can aldotutilize the memory affinity feature.   
+ Large scale graph problems with irregular instances are challenging to solve in parallel. Despite the existing large body of theoretically-fast PRAM algorithms and communication-optimal BSP alorithms, there are few implementations that achieve good parallel performance. With the PRAM model, synchronous processors are available in an unlimited amount, and accesses to memory locations are of uniform distance. PRAM is highly idealistic and helps explore maximum parallelism in a problem. At the same time,  PRAM does not reflect many features of main-stream architectures that are crictical to performance. Significant effort is necessary to produce efficient implementations on even shared-memory systems, for example, SMPs. More practical models (e.g., BSP and LogP), on the other hand, parameterize communication, synchronization, and even memory access costs. As a result, algorithms may be mapped onto real machines with reasonable performance, yet design choices are also limited. Designing and implementing parallel graph algorithms for large, irregular inputs on either class of models are challenging. 
 
-Here we focus on two of the constructs that help. Async, and finish.
+ One major challenge of translating a PRAM algorithm into an efficient program on modern architectures is to run the algorithms designed for $n$ processors on $pn$ ($p\ll n$) processors in a load-balanced fashion. Consider a graph algorithm with adjacency list as the input. A PRAM algorithm may assign for each edge (in this case each neighbor $v$ in each vertex $u$'s adjacency list) a processor. When simulating on $p$ processors, $\frac{n}{p}$ vertices are assigned to one processor. As the graph is irregular with potentially huge difference among the number of neighbors for each processor, load-imbalance is a serious performance problem. It can get even worse as many algorithms compact the graph as they proceed. Keeping track of workload distribution on the algorithmic level becomes even cumbersome. With popular distributed-memory models such as BSP, the graph has first to be partitioned and for irregular instances there is no known practical algorithm.  
 
-We do two styles, PRAM and EFFICIENT.
+ With expressive programming constructs and efficient runtime support, X10 provides a programming model that allows flexible expression of parallelism and at the same time good runtime efficiency guarantee. It enables an algorithm designer to focus on expressing the appropriate parallelism of a problem, and leaves to the runtime system the mapping of tasks on to the processors in a load-balanced fashion. Of course with X10 an algorithm may also take advantage of the various features of an architecture that impact performance, for example, the affinity of data to processor.
 
-Elegant implemenation of DFS-like traversal of graphs. Elegant implemenation of SV.
+ X10 is designed for applications that run on a cluster of SMPs. First note that similar to PGAS languages, a global virtual space is provided and this is critical in solving sparse, irregular graph instances as no graph partitioning techniques are available. Also X10 provides a notion of affinity that helps. X10 also provides various task constructs that is critical in expressing various kinds of parallelism. 
+
+ We next present two algorithms that are progammed in X10 and showcase its expressiveness. X10 has a large collection of fetures that improve the productivity, and we show two samples that enable elegant algorithm design of new parallel algorithms. We take the spanning tree problem as example. Finding a spanning tree of a graph is an important building
+block for many graph algorithms, for example, biconnected components
+and ear decomposition \cite{MR86}, and can be used in graph planarity
+testing \cite{KR88}.Section~\ref{s:trav} describes a new algorithm on SMP, and section~\ref{s:trav-dist} is the algorithm
+for distributed environment.
+
+
+ 
+The Shiloach-Vishkin algorithm, representative of the ``graft-and-shortcut'' parallel approach,
+ runs in \bigO{\log n} & \bigO{(m+n) \log n} on priority CRCW PRAM.
+
+\subsection{A Parallel Spanning Tree Algorithm based on graph traversal in X10}
+\label{s:trav}
+
+Many fast PRAM algorithms have been proposed, and they 
+are drastically different from the sequential depth-first search (DFS) or breadth-first search (BFS) approaches.
+BFS and BFS are efficient with very low overhead, and for quite a long time no parallel implementations beat the
+best sequential implementation for irregular inputs. 
+
+Bader and Cong \cite{BC04} presented the first fast parallel spanning tree algorithm that achieved good 
+speedups on SMPs. Their algorithm is based on graph traversal and similar to the DFS and BFS approaches. 
+The algorithm has two steps. First a stub tree is generated with its vertices distributed to the queue of each 
+processor. The processors then traverse the graph in a fashion similar to the sequential approach. When a thread runs out
+of work, it checks for some other thread's queue for unfinished work.
+
+With X10 a similar algorithm can be easily expressed in a few lines. The runtime system takes care of the creation of threads, scheduling of tasks, and load-balancing.  Algorithm~\ref{alg:st-x10} is an recursive algorithm that traverses the graph and computes a spanning tree. It looks very much like the recursive DFS with few yet important diffeences.
+
+\begin{algorithm}
+\begin{verbatim} 
+   void traverse(int u) {
+        int k,v;
+        finish for(k=0;k<G[u].degree;k++)
+        {
+            v=G[u].neighbors[k];
+            if(atmInts[v].compareAndSet(0,1)) {
+                G[v].parent=u;
+                final int V=v;
+                async traverse(V);
+            }
+        }
+   }
+\end{verbatim}
+\caption{A spanning tree algorithm on an SMP node in X10}
+\label{alg:st-x10}
+\end{algorithm}
+The \async keyword creates parallel activities. While visiting each neighbor $v$ of vertex $u$, a new traversal activity is created. Imagine a graph with millions of vertices, at any time the amount of parallelism is potentially huge. It puts great pressure on the runtime system for task scheduling.  The correctness of the algorithm can be similarly reasoned as in Theorem in \cite{BC04}.  We leave the discussion. Just for a simple comparison, the origianl C code without considering 
+hundreds of lines of code. 
+
+\subsection{DFS in a distributed-memory setting}
+\label{s:trav-dist}
+
+ When the target architecture does not provide uniform memory access, for example, a cluster of SMPs, Alg.~\ref{alg:st-x10} can be easily extended to take care of memory afffinity. Alg.~\ref{alg:st-dist-x10} computes a spanning tree for a graph distributed on several SMP nodes. In Alg.~\ref{alg:st-dist-x10}, again \async creates parallel activities. Compared with Alg.~\ref{alg:st-x10}, here \async creates an activity on a potentially remote node that owns vertex $v$ in the hope that the activity accesses data mostly on that node. 
+ 
+\begin{algorithm}
+\begin{verbatim} 
+
+        void traverse(int u) {
+            int k,v;
+            finish for(k=0;k<G[u].degree;k++)
+            {
+                    v=G[u].neighbors[k];
+                    if(color[v]==0) {
+                            color[v]=1;
+                            final int U=u, V=v;
+                            async (G.distribution[v]){
+                                    G[V].parent=U;
+                                    traverse(V);
+                            }
+                    }
+            }
+        }
+
+\end{verbatim}
+\caption{A spanning tree algorithm on a cluster of SMPs in X10}
+\label{alg:st-dist-x10}
+\end{algorithm}
+
+We see from this example that X10 provides programming constructs that can 
+
 
 \section{X10  Workstealing runtime support}
 \label{s:runtime}
